test/parse/func/bad-param-name.txt
;;; ERROR: 1
(module (func (param 0 i32)))
(;; STDERR ;;;
out/test/parse/func/bad-param-name.txt:2:22: error: syntax error, unexpected NAT, expecting ) or VALUE_TYPE
(module (func (param 0 i32)))
                     ^
;;; STDERR ;;)
